# pwc

./: README.md  SAFETY.md  index.html  install.sh  pyproject.toml
config/: config.example.toml
shell/: pwc.bash  pwc.zsh
src/pwc/: __init__.py  __main__.py  audit.py  capture.py  cli.py  config.py  context.py  diagnostics.py  execution.py  findings.py  heuristics.py  knowledge.py  parser.py  policy.py  prompts.py  redaction.py  render.py  risk.py  tmuxmgr.py  workspace.py
src/pwc/providers/: __init__.py  anthropic.py  base.py  mock.py  openai_compat.py
tests/: test_audit.py  test_execution.py  test_findings.py  test_policy.py  test_redaction.py  test_risk.py  test_tmux.py  test_workspace.py
tmux/: layout.sh
